--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Great Learning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <header>
+        <!-- navbar start -->
+        <nav class="navbar navbar-expand-lg bg-light py-4">
+            <div class="container d-flex">
+                <div>
+                    <a class="navbar-brand fw-bold fs-2" href="#">Great Learning</a>
+                </div>
+                <div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active fw-bold" aria-current="page" href="#">Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active fw-bold" aria-current="page" href="#">Deals</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active fw-bold" aria-current="page" href="#">Success</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active fw-bold" aria-current="page" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active fw-bold" aria-current="page" href="#">Register</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <button class="btn btn-outline-success border-info px-4">Register</button>
+                </div>
+            </div>
+        </nav>
+        <!-- navbar end -->
+
+    </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
