--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Great Learning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- css stylesheeet link -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -52,7 +54,64 @@
             </div>
         </nav>
         <!-- navbar end -->
+        <!-- image slider start -->
+        <div id="carouselExampleCaptions" class="carousel slide container" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-1.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block p-5 m-5">
+                        <h1 class="slider-header">Get Started Digital
+                            Learning</h1>
+                        <p class="py-3">It is a long established fact that a reader will be distracted by the
+                            readable
+                            content of a page when looking at its layout.</p>
+                        <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                    </div>
+                </div>
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block p-5 m-5">
+                        <h1 class="slider-header">Get Started Digital
+                            Learning</h1>
+                        <p class="py-3">It is a long established fact that a reader will be distracted by the
+                            readable
+                            content of a page when looking at its layout.</p>
+                        <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                    </div>
+                </div>
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block p-5 m-5">
+                        <h1 class="slider-header">Get Started Digital
+                            Learning</h1>
+                        <p class="py-3">It is a long established fact that a reader will be distracted by the
+                            readable
+                            content of a page when looking at its layout.</p>
+                        <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                    </div>
+                </div>
 
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <!-- image slider end -->
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
