learning section complete

--- a/index.html
+++ b/index.html
@@ -117,78 +117,165 @@
     <!-- header end  -->
     <main class="mt-5 pt-5">
         <section class="container my-5">
-            <div class="course-header text-center">
+            <div class="course-header text-center mb-5 pb-3">
                 <h1 class="pb-3 fw-bold">Discover Our Popular<br>
                     Courses</h1>
                 <p>It is a long established fact that a reader will be distracted by the readable<br>
                     content of a page when looking at its layout.</p>
             </div>
-            <div class="row row-cols-1 row-cols-md-2 g-2">
-                <div class="card">
-                    <div class="col shadow-lg d-flex">
+            <div class="row row-cols-1 row-cols-md-2 gy-3">
+                <!-- 1st card -->
+                <div class="card border border-0">
+                    <div class="col me-2 rounded-3 shadow-lg d-flex">
                         <div class="col-md-4">
                             <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
                         </div>
-                        <div class="col-md-7 ms-3">
+                        <div class="col-md-7 ms-2">
                             <div class="card-body">
-                                <h5 class="card-title">Fundamental Of UI/UX Design
+                                <h5 class="card-title fw-bold text-danger">Fundamental Of UI/UX Design
                                 </h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                <p class="card-text text-black-50">Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <p class="card-text fw-bold text-primary">Price : 20$</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="col shadow-lg d-flex">
+                <!-- 2nd card  -->
+                <div class="card border border-0">
+                    <div class="col me-2 rounded-3 shadow-lg d-flex">
                         <div class="col-md-4">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-7 ms-2">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                <h5 class="card-title fw-bold text-danger">Javascript Basic to advanced
+                                </h5>
+                                <p class="card-text text-black-50">Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <p class="card-text fw-bold text-primary">Price : 20$</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                <!-- 3rd card  -->
+                <div class="card border border-0">
+                    <div class="col me-2 rounded-3 shadow-lg d-flex">
+                        <div class="col-md-4">
+                            <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-7 ms-2">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold text-danger">Fullstack Web Development
+
+                                </h5>
+                                <p class="card-text text-black-50">Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <p class="card-text fw-bold text-primary">Price : 20$</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
+                <!-- 4th card  -->
+                <div class="card border border-0">
+                    <div class="col me-2 rounded-3 shadow-lg d-flex">
+                        <div class="col-md-4">
+                            <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-7 ms-2">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold text-danger">Digital Marketing
+                                </h5>
+                                <p class="card-text text-black-50">Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <p class="card-text fw-bold text-primary">Price : 20$</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                <!-- 5th card  -->
+                <div class="card border border-0">
+                    <div class="col me-2 rounded-3 shadow-lg d-flex">
+                        <div class="col-md-4">
+                            <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-7 ms-2">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold text-danger">Photography Basic Rules
+                                </h5>
+                                <p class="card-text text-black-50">Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <p class="card-text fw-bold text-primary">Price : 20$</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <!-- 6th card  -->
+                <div class="card border border-0">
+                    <div class="col me-2 rounded-3 shadow-lg d-flex">
+                        <div class="col-md-4">
+                            <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-7 ms-2">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold text-danger">Motion Graphics
+                                </h5>
+                                <p class="card-text text-black-50">Some quick example text to build on the card title
+                                    and make up the bulk of the card.</p>
+                                <p class="card-text fw-bold text-primary">Price : 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="d-flex justify-content-center my-5">
+                <div class="btn btn-primary fw-bold px-4 py-2">See More Courses</div>
             </div>
         </section>
+        <!-- elarning section start  -->
+        <section class="container d-flex align-items-center">
+            <div class="w-50">
+                <img class="img-fluid" src="images/working.png" alt="">
+            </div>
+            <div class="container-fluid w-50 p-5">
+                <h1 class="fw-bold pb-5">Explore The elearning
+                    Institute</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or
+                    randomised words which don't look even slightly believable. If you are going
+                    to use a passage of Lorem Ipsum, you need to be sure.
+                    <br><br>
+                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                    generators on the Internet tend to repeat predefined.
+
+                </p>
+                <div class="d-flex">
+                    <div>
+                        <h1 class="fw-bold pe-5">3.2K+</h1>
+                        <h5>Online Course</h5>
+                    </div>
+                    <div>
+                        <h1 class="fw-bold pe-5 me-4">600+</h1>
+                        <h5>Expert Member</h5>
+                    </div>
+                    <div>
+                        <h1 class="fw-bold">1K+</h1>
+                        <h5>Rating & Review</h5>
+                    </div>
+                </div>
+                <div class="btn btn-primary fw-bold px-4 py-2 rounmded-3">Read More</div>
+            </div>
+        </section>
+        <!-- elarning section end  -->
+        <!-- register box section start  -->
+        <section class="container">
+            <div>
+                <h1>Ready to join?
+                </h1>
+            </div>
+        </section>
+        <!-- register box section start  -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
