--- a/index.html
+++ b/index.html
@@ -269,13 +269,46 @@
         </section>
         <!-- elarning section end  -->
         <!-- register box section start  -->
-        <section class="container">
-            <div>
-                <h1>Ready to join?
-                </h1>
+        <section class="container mt-5 pt-5">
+            <div class="bg-primary d-flex rounded-3 my-5">
+                <div class="p-5">
+                    <h1 class="text-white">Ready to join?
+                    </h1>
+                    <p class="text-white">It is a long established fact that a reader will be distracted by the
+                        readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="w-50 d-flex align-items-center justify-content-center">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-light text-primary fw-bold py-2 px-4" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop">
+                        Register Now
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    ...
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Understood</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-        <!-- register box section start  -->
+        <!-- register box section end  -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
