--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     </header>
     <!-- header end  -->
     <main class="mt-5 pt-5">
+        <!-- course section start  -->
         <section class="container my-5">
             <div class="course-header text-center mb-5 pb-3">
                 <h1 class="pb-3 fw-bold">Discover Our Popular<br>
@@ -233,6 +234,7 @@
                 <div class="btn btn-primary fw-bold px-4 py-2">See More Courses</div>
             </div>
         </section>
+        <!-- course section end  -->
         <!-- elarning section start  -->
         <section class="container d-flex align-items-center">
             <div class="w-50">
@@ -245,7 +247,7 @@
                     majority have suffered alteration in some form, by injected humour, or
                     randomised words which don't look even slightly believable. If you are going
                     to use a passage of Lorem Ipsum, you need to be sure.
-                    <br><br>
+                    <br><br><br>
                     Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
                     generators on the Internet tend to repeat predefined.
 
@@ -309,6 +311,58 @@
             </div>
         </section>
         <!-- register box section end  -->
+        <!-- student section start  -->
+        <section class="container">
+            <div class="mt-5 pt-5">
+                <h1 class="fw-bold">
+                    Meet Our Successfull
+                    <br> Students
+                </h1>
+                <p class="pt-3 pb-4 text-muted">It is a long established fact that a reader will be distracted by the
+                    <br>
+                    readable content of a page when looking at its layout.
+                </p>
+            </div>
+            <div class="d-flex">
+                <div class="card border border-0 shadow me-4" style="width: 18rem;">
+                    <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold text-danger">Awlad Hossain</h5>
+                        <p class="card-text text-muted">UIUX Designer</p>
+
+                    </div>
+                </div>
+                <div class="card border border-0 shadow me-4" style="width: 18rem;">
+                    <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold text-danger">Jannatul Islam</h5>
+                        <p class="card-text text-muted">Motion Designer</p>
+
+                    </div>
+                </div>
+                <div class="card border border-0 shadow me-4" style="width: 18rem;">
+                    <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold text-danger">Imran Hossain</h5>
+                        <p class="card-text text-muted">Grapich Designer</p>
+
+                    </div>
+                </div>
+                <div class="card border border-0 shadow" style="width: 18rem;">
+                    <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold text-danger">Nishi Akter</h5>
+                        <p class="card-text text-muted">Web Developer</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center my-5">
+                <div class="btn btn-primary fw-bold px-4 py-2">View All</div>
+            </div>
+
+        </section>
+        <!-- student section end  -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
