question part complete

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Great Learning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <!-- css stylesheeet link -->
+    <!-- css style link -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/e408d07c6a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -363,6 +365,155 @@
 
         </section>
         <!-- student section end  -->
+        <!-- feedback section start  -->
+        <section class="container">
+            <div class="my-5 pt-5 text-center">
+                <h1 class="fw-bold">Some Students Feedback</h1>
+                <p class="text-muted">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+            </div>
+            <div class="d-flex">
+                <div class="shadow m-4 p-4">
+                    <div class="d-flex justify-content-between">
+                        <img src="images/comma.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-regular fa-star text-warning"></i>
+                        </div>
+                    </div>
+                    <p>There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected
+                        humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem.</p>
+                    <div class="d-flex">
+                        <div>
+                            <img src="images/student/student-5.png" alt="">
+                        </div>
+                        <div class="ps-3">
+                            <h6 class="fw-bold">Awlad Hossain</h6>
+                            <p class="text-muted">UI Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="shadow m-4 p-4">
+                    <div class="d-flex justify-content-between">
+                        <img src="images/comma.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-regular fa-star text-warning"></i>
+                        </div>
+                    </div>
+                    <p>There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected
+                        humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem.</p>
+                    <div class="d-flex">
+                        <div>
+                            <img src="images/student/student-6.png" alt="">
+                        </div>
+                        <div class="ps-3">
+                            <h6 class="fw-bold">Shanta Akter</h6>
+                            <p class="text-muted">Grapich Designer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- feedback section end  -->
+        <!-- question section start  -->
+        <section class="container px-5">
+            <div class="py-5 mt-5 text-center">
+                <h1 class="fw-bold">Frequently Asked Questions</h1>
+                <p class="text-muted pt-3">It is a long established fact that a reader will be distracted by the
+                    readable<br>
+                    content of a page when looking at its layout.</p>
+            </div>
+            <div class="accordion mx-5 px-5 mb-5" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Accordion Item #1
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Accordion Item #1
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Accordion Item #2
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                            the collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Accordion Item #3
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- question section end  -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
