--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header start -->
     <header>
         <!-- navbar start -->
-        <nav class="navbar navbar-expand-lg bg-light py-4">
+        <nav class="navbar navbar-expand-lg bg-light pt-4">
             <div class="container d-flex">
                 <div>
                     <a class="navbar-brand fw-bold fs-2" href="#">Great Learning</a>
@@ -58,7 +58,7 @@
         </nav>
         <!-- navbar end -->
         <!-- image slider start -->
-        <div id="carouselExampleCaptions" class="carousel slide container" data-bs-ride="false">
+        <div id="carouselExampleCaptions" class="carousel slide container pt-4" data-bs-ride="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -70,13 +70,13 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="images/cover/cover-1.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block p-5 m-5">
+                    <div class="carousel-caption d-none d-md-block">
                         <h1 class="slider-header">Get Started Digital
                             Learning</h1>
                         <p class="py-3">It is a long established fact that a reader will be distracted by the
                             readable
                             content of a page when looking at its layout.</p>
-                        <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                        <div class="btn btn-primary fw-bold px-4 pt-2">Get Started</div>
                     </div>
                 </div>
                 <div class="carousel-item active">
@@ -238,50 +238,52 @@
         </section>
         <!-- course section end  -->
         <!-- elarning section start  -->
-        <section class="container d-flex align-items-center">
-            <div class="w-50">
-                <img class="img-fluid" src="images/working.png" alt="">
-            </div>
-            <div class="container-fluid w-50 p-5">
-                <h1 class="fw-bold pb-5">Explore The elearning
-                    Institute</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour, or
-                    randomised words which don't look even slightly believable. If you are going
-                    to use a passage of Lorem Ipsum, you need to be sure.
-                    <br><br><br>
-                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-                    generators on the Internet tend to repeat predefined.
-
-                </p>
-                <div class="d-flex">
-                    <div>
-                        <h1 class="fw-bold pe-5">3.2K+</h1>
-                        <h5>Online Course</h5>
-                    </div>
-                    <div>
-                        <h1 class="fw-bold pe-5 me-4">600+</h1>
-                        <h5>Expert Member</h5>
-                    </div>
-                    <div>
-                        <h1 class="fw-bold">1K+</h1>
-                        <h5>Rating & Review</h5>
-                    </div>
+        <section>
+            <div class="container d-md-flex align-items-center">
+                <div>
+                    <img class="img-fluid" src="images/working.png" alt="">
                 </div>
-                <div class="btn btn-primary fw-bold px-4 py-2 rounmded-3">Read More</div>
+                <div class=" container-fluid  p-5">
+                    <h1 class="fw-bold pb-3">Explore The elearning
+                        Institute</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or
+                        randomised words which don't look even slightly believable. If you are going
+                        to use a passage of Lorem Ipsum, you need to be sure.
+                        <br>
+                        Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                        generators on the Internet tend to repeat predefined.
+
+                    </p>
+                    <div class="row row-column-lg-3 row-column-md-2 row-column-2">
+                        <div class="col">
+                            <h1 class="fw-bold pe-5">3.2K+</h1>
+                            <h5>Online Course</h5>
+                        </div>
+                        <div class="col">
+                            <h1 class="fw-bold pe-5 me-4">600+</h1>
+                            <h5>Expert Member</h5>
+                        </div>
+                        <div class="col">
+                            <h1 class="fw-bold">1K+</h1>
+                            <h5>Rating & Review</h5>
+                        </div>
+                    </div>
+                    <div class="btn btn-primary fw-bold px-4 py-2 rounmded-3">Read More</div>
+                </div>
             </div>
         </section>
         <!-- elarning section end  -->
         <!-- register box section start  -->
         <section class="container mt-5 pt-5">
-            <div class="bg-primary d-flex rounded-3 my-5">
+            <div class="bg-primary d-md-flex rounded-3 my-5">
                 <div class="p-5">
                     <h1 class="text-white">Ready to join?
                     </h1>
                     <p class="text-white">It is a long established fact that a reader will be distracted by the
                         readable content of a page when looking at its layout.</p>
                 </div>
-                <div class="w-50 d-flex align-items-center justify-content-center">
+                <div class="w-50 d-flex align-items-center ms-5 pb-3 ms-md-0 justify-content-md-center">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-light text-primary fw-bold py-2 px-4" data-bs-toggle="modal"
                         data-bs-target="#staticBackdrop">
@@ -325,37 +327,45 @@
                     readable content of a page when looking at its layout.
                 </p>
             </div>
-            <div class="d-flex">
-                <div class="card border border-0 shadow me-4" style="width: 18rem;">
-                    <img src="images/student/student-1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold text-danger">Awlad Hossain</h5>
-                        <p class="card-text text-muted">UIUX Designer</p>
+            <div class=" row row-cols-lg-4 row-cols-md-2 row-cols-1">
+                <div class="col">
+                    <div class="card border border-0 shadow me-4">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold text-danger">Awlad Hossain</h5>
+                            <p class="card-text text-muted">UIUX Designer</p>
 
+                        </div>
                     </div>
                 </div>
-                <div class="card border border-0 shadow me-4" style="width: 18rem;">
-                    <img src="images/student/student-2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold text-danger">Jannatul Islam</h5>
-                        <p class="card-text text-muted">Motion Designer</p>
+                <div class="col">
+                    <div class="card border border-0 shadow me-4">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold text-danger">Jannatul Islam</h5>
+                            <p class="card-text text-muted">Motion Designer</p>
 
+                        </div>
                     </div>
                 </div>
-                <div class="card border border-0 shadow me-4" style="width: 18rem;">
-                    <img src="images/student/student-3.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold text-danger">Imran Hossain</h5>
-                        <p class="card-text text-muted">Grapich Designer</p>
+                <div class="col">
+                    <div class="card border border-0 shadow me-4">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold text-danger">Imran Hossain</h5>
+                            <p class="card-text text-muted">Grapich Designer</p>
 
+                        </div>
                     </div>
                 </div>
-                <div class="card border border-0 shadow" style="width: 18rem;">
-                    <img src="images/student/student-4.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold text-danger">Nishi Akter</h5>
-                        <p class="card-text text-muted">Web Developer</p>
+                <div class="col">
+                    <div class="card border border-0 shadow me-4">
+                        <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold text-danger">Nishi Akter</h5>
+                            <p class="card-text text-muted">Web Developer</p>
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -372,7 +382,7 @@
                 <p class="text-muted">It is a long established fact that a reader will be distracted by the readable
                     content of a page when looking at its layout.</p>
             </div>
-            <div class="d-flex">
+            <div class="d-lg-flex ">
                 <div class="shadow m-4 p-4">
                     <div class="d-flex justify-content-between">
                         <img src="images/comma.png" alt="">
@@ -427,14 +437,14 @@
         </section>
         <!-- feedback section end  -->
         <!-- question section start  -->
-        <section class="container px-5">
+        <section class="container">
             <div class="py-5 mt-5 text-center">
                 <h1 class="fw-bold">Frequently Asked Questions</h1>
                 <p class="text-muted pt-3">It is a long established fact that a reader will be distracted by the
                     readable<br>
                     content of a page when looking at its layout.</p>
             </div>
-            <div class="accordion mx-5 px-5 mb-5" id="accordionExample">
+            <div class="accordion mb-5" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -514,7 +524,36 @@
             </div>
         </section>
         <!-- question section end  -->
+        <!-- company logo section start  -->
+        <section class="container d-none d-lg-flex">
+            <div>
+                <h1 class="fw-bold text-center py-5">Trusted by over 800+ companies</h1>
+                <div class="mb-5 pb-5">
+                    <img class="me-4" src="images/company/company-1.png" alt="">
+                    <img class="me-4" src="images/company/company-2.png" alt="">
+                    <img class="me-4" src="images/company/company-3.png" alt="">
+                    <img class="me-4" src="images/company/company-4.png" alt="">
+                    <img class="me-4" src="images/company/company-5.png" alt="">
+                    <img src="images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- company logo section end  -->
     </main>
+    <footer class="bg-dark text-center pt-5">
+        <h2 class=" text-white">Pro Edu</h2>
+        <p class="text-white">Office 41, Zawaya Buildin, Ghala Muscat, </p>
+        <p class="text-white">Sultanate of Oman
+        </p>
+        <p class="text-white">Privacy Policy | Terms of use
+        </p>
+        <div class="text-center pb-5">
+            <a class="p-2" href="https://www.facebook.com/"><i class="fa-brands fa-facebook fs-2"></i></a>
+            <a class="p-2" href="https://twitter.com/?lang=en"><i class="fa-brands fa-square-twitter fs-2"></i></a>
+            <a class="p-2" href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram fs-2"></i></a>
+            <a class="p-2" href="https://www.tiktok.com/en/"><i class="fa-brands fa-tiktok fs-2"></i></a>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
