--- a/index.html
+++ b/index.html
@@ -73,60 +73,66 @@
         </nav>
         <!-- navbar end -->
         <!-- image slider start -->
-        <div id="carouselExampleCaptions" class="carousel slide container pt-4" data-bs-ride="false">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption  d-md-block">
-                        <p class="slider-header text-warning">Get Started Digital
-                            Learning</p>>
-                        <p class="py-3 text-light fw-bold">Undoubtedly move forward on the path of dreams, stop
-                            unemployment. We are by your side.</p>
-                        <div class="btn btn-primary fw-bold px-4 pt-2">Get Started</div>
-                    </div>
+        <section class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                 </div>
-                <div class="carousel-item active">
-                    <img class="" src="images/cover/cover-1.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-md-block pb-0 mb-0 m-5">
-                        <h1 class="slider-header text-warning">Get Started Digital
-                            Learning</h1>
-                        <p class="py-3 text-light fw-bold">Undoubtedly move forward on the path of dreams, stop
-                            unemployment. We are by your side.</p>
-                        <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption  d-md-block ">
+                            <div class="carousel-caption  d-md-block ">
+                                <div class="slider-info">
+                                    <h1 class="slider-header text-warning flex-nowrap">Get Started Digital
+                                        Learning</h1>
+                                    <p class=" text-light fw-bold slider-text">Undoubtedly move forward on the path
+                                        of dreams,
+                                        stop
+                                        unemployment. We are by your side.</p>
+                                    <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption  d-md-block">
+                                <h1 class="slider-header text-warning">Get Started Digital
+                                    Learning</h1>
+                                <p class="py-3 text-light fw-bold">Undoubtedly move forward on the path of dreams, stop
+                                    unemployment. We are by your side.</p>
+                                <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption  d-md-block ">
+                                <h1 class="slider-header text-warning">Get Started Digital
+                                    Learning</h1>
+                                <p class="py-3 text-light fw-bold">Undoubtedly move forward on the path of dreams, stop
+                                    unemployment. We are by your side.</p>
+                                <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                            </div>
+                        </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="carousel-item active">
-                    <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption  d-md-block pb-0 mb-0 m-5">
-                        <h1 class="slider-header text-warning">Get Started Digital
-                            Learning</h1>
-                        <p class="py-3 text-light fw-bold">Undoubtedly move forward on the path of dreams, stop
-                            unemployment. We are by your side.</p>
-                        <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
-                    </div>
-                </div>
-
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-        <!-- image slider end -->
+        </section>
+        <!-- image slider end  -->
     </header>
     <!-- header end  -->
     <main class="mt-5 pt-5">
@@ -146,9 +152,9 @@
                 <div class="card border border-0">
                     <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class=" col-md-4">
-                            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-1.png" class="img-fluid w-100 rounded-start" alt="...">
                         </div>
-                        <div class="col-md-7 ms-2">
+                        <div class=" col-md-7 ms-2">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold text-success">Fundamental Of UI/UX Design
                                 </h5>
@@ -164,7 +170,7 @@
                 <div class="card border border-0">
                     <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
-                            <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-2.png" class="img-fluid w-100 rounded-start" alt="...">
                         </div>
                         <div class="col-md-7 ms-2">
                             <div class="card-body">
@@ -181,7 +187,7 @@
                 <div class="card border border-0">
                     <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
-                            <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-3.png" class=" w-100 img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-7 ms-2">
                             <div class="card-body">
@@ -199,7 +205,7 @@
                 <div class="card border border-0">
                     <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
-                            <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-4.png" class=" w-100 img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-7 ms-2">
                             <div class="card-body">
@@ -216,7 +222,7 @@
                 <div class="card border border-0">
                     <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
-                            <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-5.png" class="w-100 img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-7 ms-2">
                             <div class="card-body">
@@ -233,7 +239,7 @@
                 <div class="card border border-0">
                     <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
-                            <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/course/course-6.png" class=" w-100 img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-7 ms-2">
                             <div class="card-body">
